# O-exokernel

./: README.md
exokernel/: Cargo.toml  build.rs  rust_toolchain.toml
exokernel/cargo/: config.toml
exokernel/linker/: aarch64.ld  loongarch64.ld  riscv64.ld  x86_64.ld
exokernel/makefile/: makefile
exokernel/scripts/: build_all.sh  clean.sh  install_deps.sh  make-grub-iso.sh  test-qemu.sh  verify-multiboot2.sh
exokernel/srv/: lib.rs  main.rs
exokernel/srv/arch/: mod.rs
exokernel/srv/arch/aarch64/: boot.rs  mod.rs  uart.rs
exokernel/srv/arch/loongarch64/: boot.rs  mod.rs  uart.rs
exokernel/srv/arch/riscv64/: boot.rs  mod.rs  uart.rs
exokernel/srv/arch/x86_64/: boot.rs  mod.rs  multiboot2.rs  serial.rs
exokernel/srv/boot/: devicetree.rs  mod.rs  multiboot2.rs
exokernel/srv/capability/: mod.rs  resourse.rs
exokernel/srv/console/: mod.rs
exokernel/srv/libos_interface/: mod.rs  ownership_api.rs
exokernel/srv/mm/: allocator.rs  mod.rs  ownership.rs  physical.rs
